<resources>
    <string name="app_name">Reqelford</string>
    <string name="copy_right">Copyright &#169; %1$d RMIT Solutions</string>
    <string name="app_description">Reqelford mobile app brings parents, teachers, and students together on a common interactive platform to foster a collaborative environment.</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_drawer_description">Navigation Drawer</string>
    <string name="nav_drawer_profile_image_desc">Profile Image</string>

    <string name="nav_drawer_item_reqel_board">Reqelboard</string>
    <string name="nav_drawer_item_downloads">Downloads</string>
    <string name="nav_drawer_item_contact">Contact</string>
    <string name="nav_drawer_item_logout">Logout</string>
    <string name="nav_drawer_item_settings">Settings</string>
    <string name="nav_drawer_item_about">About</string>
    <string name="nav_drawer_item_change_password">Change Password</string>

    <!--Login strings-->
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="logo_img_description">Reqelford</string>
    <string name="login_hint_username">User name</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_old_password">Current Password</string>
    <string name="login_hint_new_password">New Password</string>
    <string name="login_hint_confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>

    <string name="preference_file_key">eskool_pref_file_key</string>


   <!--Change Password-->


    <!--dashboard modules-->
    <string name="dashboard_module_profile">Profile</string>
    <string name="dashboard_module_attendance">Attendance</string>
    <string name="dashboard_module_fee">Fee</string>
    <string name="dashboard_module_worksheets">Worksheets</string>
    <string name="dashboard_module_homework">Home work</string>
    <string name="dashboard_module_circulars">Circulars</string>
    <string name="dashboard_module_library">Library</string>
    <string name="dashboard_module_cafeteria">Cafeteria</string>
    <string name="dashboard_module_transport">Transport</string>
    <string name="dashboard_module_assessments">Assessments</string>
    <string name="dashboard_module_timetable">Time Table</string>
    <string name="dashboard_module_calendar">Calendar</string>
    <!-- / dashboard modules-->
    <string name="maps_api_key">AIzaSyDthdQNN_pJpTQh1CoCFGT8ebg1HJEezsA</string>
    <string name="date_picker_dialog_fragment_tag">date_picker_dialog_fragment_tag</string>
    <string name="download">download</string>
    <string name="delete">delete</string>
    <string name="sorry">Sorry</string>
    <string name="no_results">No results to show</string>
    <string name="totals_title">Totals</string>
    <string name="you_are_offline">You are offline</string>
    <string name="present_label">Present</string>
    <string name="absent_label">Absent</string>

    <string name="student_class_text">%1$s | %2$s - %3$s - %4$s</string>

    <!-- file provider-->
    <string name="file_provider_name">net.rmitsolutions.eskool.fileProvider</string>

    <!---reset password-->
    <string name="reset_password">Reset Password</string>
    <string name="submit_button">Submit</string>
    <string name="close_button">Close</string>
    <string name="dialog_hint_email">Enter email</string>

    <!---Sliders-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LOG IN</string>

    <string name="play_heading">Reqelford Playschool Program</string>
    <string name="play_description">Reqelford strongly believes that kindergarteners learn best through imaginative and purposeful play, hands-on activities and by actively engaging in investigating and exploring the world around them.

        Children are natural learners and they learn from everything they do provided they feel happy and safe. The school leaves no stone unturned to provide a secure environment for its children.</string>


    <string name="overview_heading">Overview</string>
    <string name="overview_description">Reqelford International School is a one of a kind educational establishment in Hyderabad with the perfect mix of learning and fun supported by the best infrastructure in the industry. Reqelford International provides an impeccably designed environment for the holistic development of young minds. Our curriculum is designed to develop your ward for the interconnected world today..</string>

    <string name="facilities_title">Smart Classroom</string>
    <string name="facilities_description">
        Equipped with the latest High-end Smart boards we bring in more life and reality into every day lessons. Built in tools enhance the teaching – learning process. Textbook and subject digital content are loaded onto the Smart board so as to be accessible within the classroom. Smart board technology caters to different learning styles with students demonstrating increased motivation leading to increased participation in class.
    </string>


    <string name="day_care_title">Day-care</string>
    <string name="day_care_description">Day care facility is provided to students after school hours so as to cater to parents who are still at work and can’t attend to their children immediately. A well-trained nurse supervises and monitors the child care centre so as to ensure that each child’s needs are attended to. Sleep areas, toys and regularly handled equipment are periodically sanitized.</string>


</resources>
