<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data class="ChangePasswordDataBinding">
        <import type="android.view.View"/>

        <variable
           name="changePasswordVM"
            type="net.rmitsolutions.eskool.models.ChangePasswordModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            />

    </LinearLayout>



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:paddingBottom="0dp"
            android:paddingEnd="@dimen/padding"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                app:errorTextAppearance="@style/ErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_old_password"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={changePasswordVM.currentPassword}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblAlertNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                app:errorTextAppearance="@style/ErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_new_password"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={changePasswordVM.newPassword}" />

            </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblAlertConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_confirm_password"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={changePasswordVM.confirmPassword}" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:onClick="onSubmitClick"
            style="?android:borderlessButtonStyle"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/app_body_text_light"/>

        <include
            layout="@layout/include_status_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/loginCardView" />

    </LinearLayout>


    </LinearLayout>
</layout>


