<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="ResetPasswordDataBinding">

        <variable
            name="resetpasswordVM"
            type="net.rmitsolutions.eskool.ResetPasswordModel"/>
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:padding="@dimen/spacing20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:layout_weight=".5"
                android:textStyle="normal"
                android:textSize="@dimen/spacing20dp"/>

            <Button
                android:id="@+id/dialogClose"
                android:layout_width="@dimen/spacing75dp"
                android:layout_height="@dimen/spacing20dp"
                android:background="@drawable/ic_close_black_24dp"
                android:onClick="onDialogCloseClick"
                android:layout_weight="1.5"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/light_grey"/>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing0dp"
        android:weightSum="2"
        android:paddingEnd="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblAlertUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing8dp"
            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_username"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={resetpasswordVM.userName}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblAlertEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_hint_email"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={resetpasswordVM.email}" />
        </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:cardBackgroundColor="@color/light_red_shade"
                app:cardCornerRadius="@dimen/spacing8dp"
                app:cardElevation="@dimen/spacing2dp">

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/indicatorView"
                    style="@style/AVLoadingIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:indicatorColor="@color/deep_orange"
                    app:indicatorName="LineScalePulseOutIndicator" />
            </android.support.v7.widget.CardView>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"

            android:background="@color/light_grey"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing10dp"
            android:gravity="right"
            android:weightSum="1"
            android:padding="@dimen/spacing8dp"
            android:orientation="horizontal">

<!--
                <android.support.v7.widget.CardView
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:visibility="invisible"
                    app:cardBackgroundColor="@color/light_red_shade"
                    app:cardCornerRadius="@dimen/spacing8dp"
                    app:cardElevation="@dimen/spacing2dp">

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/indicatorView"
                        style="@style/AVLoadingIndicatorView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        app:indicatorColor="@color/deep_orange"
                        app:indicatorName="LineScalePulseOutIndicator" />
                </android.support.v7.widget.CardView>-->

            <Button
                android:id="@+id/submitButton"
                android:layout_width="@dimen/spacing0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/submit_button"
                android:onClick="onSubmitClick"
                style="?android:borderlessButtonStyle"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/app_body_text_light"/>

            <Button
                android:id="@+id/closeButton"
                android:layout_width="@dimen/spacing0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/close_button"
                style="?android:borderlessButtonStyle"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/app_body_text_light"
                android:layout_marginLeft="@dimen/spacing5dp"/>


            </LinearLayout>
<!--
            <android.support.v7.widget.CardView
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:cardBackgroundColor="@color/light_red_shade"
                app:cardCornerRadius="@dimen/spacing8dp"
                app:cardElevation="@dimen/spacing2dp">

                    <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/indicatorView"
                    style="@style/AVLoadingIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                        android:visibility="invisible"
                        app:indicatorColor="@color/deep_orange"
                    app:indicatorName="LineScalePulseOutIndicator" />
            </android.support.v7.widget.CardView>-->






    </LinearLayout>




</layout>
